--- a/css/ucb-footer-menu-region.css
+++ b/css/ucb-footer-menu-region.css
@@ -1,3 +1,15 @@
 .ucb-footer-menu-region {
 	background-color: #272727;
 }
+
+.ucb-footer-menu-region .menu-item a {
+	color: #FFF;
+	line-height: 2.5rem;
+	margin: 0 1.5rem 0 0;
+	padding: 0;
+}
+
+.ucb-footer-menu-region .menu-item a:hover {
+	color: var(--ucb-gold);
+	background-color: transparent;
+}
