--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,6 @@
     display: flex;
     flex-grow: 0;
     flex-shrink: 0;
-	justify-content: space-between;
     padding: 0;
     height: inherit;
     align-items: center;
@@ -235,8 +234,9 @@
     color: var(--ucb-darker);
     border-bottom: 2px solid #fff;
     font-weight: 600;
-    padding: 0.25rem 1rem;
-    margin: 0.5rem 0;
+    line-height: 2rem;
+    padding: .25rem 1rem;
+    margin: 2px 0 0 0;
   }
   
   .ucb-footer-top .ucb-menu a.nav-link {
