--- a/css/ucb-secondary-menu-region.css
+++ b/css/ucb-secondary-menu-region.css
@@ -8,6 +8,45 @@
 	flex-direction: row;
 }
 
+.ucb-main-nav-continer.ucb-secondary-menu-position-inline {
+	justify-content: space-between;
+}
+
 .ucb-main-nav-continer.ucb-secondary-menu-position-above {
 	flex-direction: column-reverse;
+	align-items: stretch;
+}
+
+.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region {
+	background-color: #272727;
+}
+
+.ucb-secondary-menu-region .ucb-secondary-menu-region-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: right;
+}
+
+.ucb-main-nav-continer.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .ucb-secondary-menu-region-container, .ucb-main-nav-continer.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .ucb-menu {
+	gap: .5rem;
+}
+
+.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region .ucb-secondary-menu-region-container, .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region .ucb-menu {
+	gap: 1.5rem;
+}
+
+.ucb-main-nav-continer.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .menu-item a {
+	margin: .25rem 0;
+}
+
+.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu-item a {
+	color: #FFF;
+	line-height: 2.5rem;
+	margin: 0;
+	padding: 0;
+}
+
+.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu-item a:hover {
+	color: var(--ucb-gold);
+	background-color: transparent;
 }
