--- a/templates/regions/region--secondary-menu.html.twig
+++ b/templates/regions/region--secondary-menu.html.twig
@@ -14,9 +14,8 @@
 #}
 {{ attach_library('boulderD9_base/ucb-secondary-menu-region') }}
 <div class="ucb-secondary-menu-region">
-{% if ucb_secondary_menu_default_links %}
-	{% include "@boulderD9_base/includes/ucb-header-secondary-menu.html.twig" %}
-{% endif %}{% if content|render %}
-	{{ content }}
-{% endif %}
+	<div class="ucb-secondary-menu-region-container{{ ucb_secondary_menu_position == 'above' ? ' container' : ''}}">
+		{% if ucb_secondary_menu_default_links %}{% include "@boulderD9_base/includes/ucb-header-secondary-menu.html.twig" %}{% endif %}
+		{{ content }}
+	</div>
 </div>
