--- a/css/ucb-footer-menu-region.css
+++ b/css/ucb-footer-menu-region.css
@@ -8,9 +8,9 @@
 
 .ucb-footer-menu-region .menu-item a {
 	color: #FFF;
-	line-height: 2.5rem;
+	line-height: 1rem;
 	margin: 0;
-	padding: 0;
+	padding: .75rem 0;
 }
 
 .ucb-footer-menu-region .menu-item a:hover {
