#163 fixes issue with library CSS, removes duplicated class name

--- a/templates/regions/region--primary-menu.html.twig
+++ b/templates/regions/region--primary-menu.html.twig
@@ -12,6 +12,6 @@
  * @see template_preprocess_region()
  */
 #}
-<div class="ucb-primary-menu-region ucb-primary-menu-region">
+<div class="ucb-primary-menu-region">
 	<div class="ucb-primary-menu-region-container{{ ucb_secondary_menu_position == 'above' ? ' container' : ''}}">{{ content }}</div>
 </div>
