--- a/templates/block/block--inline-block--ucb-slate-form.html.twig
+++ b/templates/block/block--inline-block--ucb-slate-form.html.twig
@@ -2,20 +2,20 @@
 
 {%
   set classes = [
-  'block',
-  'block-' ~ configuration.provider|clean_class,
-  'block-' ~ plugin_id|clean_class,
-  bundle ? 'block--type-' ~ bundle|clean_class,
-  view_mode ? 'block--view-mode-' ~ view_mode|clean_class
+    'block',
+    'container',
+    'block-' ~ configuration.provider|clean_class,
+    'block-' ~ plugin_id|clean_class,
+    bundle ? 'block--type-' ~ bundle|clean_class,
+    view_mode ? 'block--view-mode-' ~ view_mode|clean_class,
 ]
 %}
 
-	<div class="container">
-		<h2{{title_attributes}}>
-			{{ label }}
-		</h2>
-        <slate-form slateId="{{content.field_ucb_slate_form_id|render|striptags|trim|lower}}" slateDomain="{{content.field_ucb_slate_form_domain.0['#url']}}"></slate-form>
+<div{{attributes.addClass(classes)}}>
+  {{ title_prefix }}
+  <h2{{title_attributes}}>
+    {{ label }}
+  </h2>
+  {{ title_suffix }}
+      <slate-form slateId="{{content.field_ucb_slate_form_id|render|striptags|trim|lower}}" slateDomain="{{content.field_ucb_slate_form_domain.0['#url']}}"></slate-form>
 	</div>
-
-
-
