--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -240,6 +240,6 @@
   {% if service_mainstay_includes|length > 0%}
   {{ attach_library('boulderD9_base/mainstay') }}
   {% for service in service_mainstay_includes %}
-  <mainstay-service bot-token="{{service.service_settings.license_id}}" college-id="{{service.service_settings.college_id}}"></mainstay-service>
+  <mainstay-service bot-token="{{service.service_settings.bot_token}}" college-id="{{service.service_settings.college_id}}"></mainstay-service>
   {% endfor %}
   {% endif %} 
