--- a/css/ucb-status-page-block.css
+++ b/css/ucb-status-page-block.css
@@ -1,3 +1,37 @@
-h4 {
-    color: red;
+/* .ucb-status-block-container{
+    max-width: 300px;
+} */
+
+.ucb-status-none{
+    background-color: #198754;
+}
+
+.ucb-status-minor{
+    background-color: #ffc107
+}
+
+.ucb-status-major, .ucb-status-critical{
+    background-color: #dc3545;;
+}
+
+.ucb-status-block-link{
+    display: flex;
+    padding: 20px;
+    align-items: center;
+    flex-direction: row;
+}
+
+.ucb-status-block-link{
+    text-decoration: none;
+}
+
+.ucb-status-block-link > svg{
+    margin-right: 20px;
+    color: white;
+}
+
+.ucb-status-block-message{
+    margin-bottom: 0;
+    color:white;
+    font-weight: bolder;
 }
