--- a/templates/content/node--ucb-issue.html.twig
+++ b/templates/content/node--ucb-issue.html.twig
@@ -19,7 +19,7 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-4 issue-sidebar-banner">
             {{content.field_ucb_issue_image|render}}
         </div>
     <div class="col-sm-8">
