--- a/templates/paragraphs/paragraph--ucb-issue-section.html.twig
+++ b/templates/paragraphs/paragraph--ucb-issue-section.html.twig
@@ -16,7 +16,7 @@
     {% for key, item in paragraph.field_ucb_issue_article_select %}						
     {# If teaser #}
         {% if paragraph.field_ucb_issue_section_style.value is same as("0") %}
-        <div class="issue-section-content-teaser">
+        <div class="issue-section-content">
             <a href="{{ path('entity.node.canonical', {'node': content.field_ucb_issue_article_select['#items'].entity.id}) }}">
                 <div class="teaser-article-thumbnail" id='teaser-article-thumbnail-{{key}}'> {{ item.entity.field_ucb_article_thumbnail|view }} </div>
             </a>
@@ -33,16 +33,41 @@
                         
     {# If feature #}
         {% elseif paragraph.field_ucb_issue_section_style.value is same as ("1") %}
-            <p> I am a feature!</p>
+            <div class="issue-section-content-feature">
+                <a href="{{ path('entity.node.canonical', {'node': content.field_ucb_issue_article_select['#items'].entity.id}) }}">
+                    <div class="feature-article-feature" id='feature-article-thumbnail-{{key}}'> {{ item.entity.field_ucb_article_thumbnail|view }} </div>
+                </a>
+                <div class="issue-section-content-summary">
+                    <a class="issue-article-title-link" href="{{ path('entity.node.canonical', {'node': content.field_ucb_issue_article_select['#items'].entity.id}) }}">
+                        <h3 class="issue-section-feature-title">{{item.entity.title.value}}</h3>
+                    </a>
+                    <div class="issue-article-categories">{{item.entity.field_ucb_article_categories|view}}</div>
+                    <div class="issue-article-tags">{{item.entity.field_ucb_article_tags|view}}</div>
+                    <p class="issue-section-feature-summary">{{item.entity.field_ucb_article_summary.value}}</p>
+                    <a class="issue-section-feature-read" href="{{ path('entity.node.canonical', {'node': content.field_ucb_issue_article_select['#items'].entity.id}) }}">READ MORE</a>
+                </div>
+            </div>
 
     {# title & thumbnail #}
         {% elseif paragraph.field_ucb_issue_section_style.value is same as ("2") %}
-            <p> I am a title and thumb!</p>
+        <div class="issue-section-content">
+            <a href="{{ path('entity.node.canonical', {'node': content.field_ucb_issue_article_select['#items'].entity.id}) }}">
+                <div class="title-thumb-article-thumbnail" id='title-thumb-article-thumbnail-{{key}}'> {{ item.entity.field_ucb_article_thumbnail|view }} </div>
+            </a>
+            <div class="issue-section-content-summary">
+                <a class="issue-article-title-link" href="{{ path('entity.node.canonical', {'node': content.field_ucb_issue_article_select['#items'].entity.id}) }}">
+                    {{item.entity.title.value}}
+                </a>
+            </div>
+        </div>
 
     {# title only #}
         {% else %}
-            <p> I am a title only!</p>
-
+        <div class="issue-section-content-summary">
+            <a class="issue-article-title-link" href="{{ path('entity.node.canonical', {'node': content.field_ucb_issue_article_select['#items'].entity.id}) }}">
+                {{item.entity.title.value}}
+            </a>
+        </div>
         {% endif %}
     {% endfor %}
 
