wip: adds optional secondary issue image

--- a/templates/content/node--ucb-issue.html.twig
+++ b/templates/content/node--ucb-issue.html.twig
@@ -21,6 +21,9 @@
     <div class="row">
         <div class="col-sm-4 issue-sidebar-banner">
             {{content.field_ucb_issue_image|render}}
+            <div class="secondary-issue-image">
+                {{content.field_ucb_issue_secondary_image}}
+            </div>
         </div>
     <div class="col-sm-8">
         {{content.field_ucb_issue_section}}
